--- a/Capstone-Project-EIP/CapstoneProjectAdmin/bin/CapstoneProjectAdmin.dll.config
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/bin/CapstoneProjectAdmin.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CapstoneProjectAdmin-20180604012927.mdf;Initial Catalog=aspnet-CapstoneProjectAdmin-20180604012927;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="IdentityEntities" connectionString="Server=BINHNQSE62065\SQLEXPRESS;Database=Demo;User Id=sa;Password=SE62065" providerName="System.Data.SqlClient" />
+    <add name="SkyUpEntities" connectionString="metadata=res://*/Models.Entities.SkyUpEntities.csdl|res://*/Models.Entities.SkyUpEntities.ssdl|res://*/Models.Entities.SkyUpEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HmsEntities" connectionString="metadata=res://*/Models.Entities.HmsEntities.csdl|res://*/Models.Entities.HmsEntities.ssdl|res://*/Models.Entities.HmsEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BINHNQSE62065\SQLEXPRESS;initial catalog=Demo;persist security info=True;user id=sa;password=SE62065;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
