--- a/HmsService/HmsService/HmsService/packages.config
+++ b/HmsService/HmsService/HmsService/packages.config
@@ -8,6 +8,10 @@
   <package id="jQuery" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebHelpers" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net45" />
@@ -18,9 +22,13 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moment.js" version="2.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Configuration.Abstractions" version="2.0.2.26" targetFramework="net45" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net45" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
